...
        <variable
            name="config"
            type="cz.zcu.fav.tymsnu.stimulatorremotecontrol.model.AConfiguration" />
    </data>

    <LinearLayout
        android:id="@+id/control_scheme_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/control_list_view_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            app:imageResource="@{config.statusIcon}"
            android:visibility="visible" />

...
