<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Aplikace-->
    <string name="app_name">stimulatorremotecontrol</string>
    <string name="app_title">Remote stimulator control</string>
    <string name="app_author">Tým snů</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving application…</string>
    <string name="lost_connection">Connection lost…</string>
    <string name="unable_to_connect">Unable to connect device</string>

    <!-- Podnadpis aplikace-->
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!-- Hlavní menu-->
    <string name="menu_main_connect">connect</string>
    <string name="menu_main_disconnect">disconnect</string>

    <!-- Boční menu -->
    <string name="nav_drawer_open">Open sidebar</string>
    <string name="nav_drawer_close">Close sidebar</string>
    <string name="nav_drawer_title_1">Experiments</string>
    <string name="nav_drawer_title_2">Options</string>

    <string name="nav_text_item_1">ERP</string>
    <string name="nav_text_item_2">BCI</string>
    <string name="nav_text_item_2_1">f-VEP</string>
    <string name="nav_text_item_2_2">t-VEP</string>
    <string name="nav_text_item_2_3">c-VEP</string>
    <string name="nav_text_item_3">Reaction experiment</string>
    <string name="nav_text_item_4">Autostimulation</string>
    <string name="nav_text_item_5">Biosensor logger</string>
    <string name="nav_text_item_6">Test mode</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_help">Help</string>
    <string name="nav_text_about">About</string>

    <string-array name="nav_text_array">
        <item>@string/nav_text_item_1</item>
        <item>@string/nav_text_item_2_1</item>
        <item>@string/nav_text_item_2_2</item>
        <item>@string/nav_text_item_2_3</item>
        <item>@string/nav_text_item_3</item>
        <item>@string/nav_text_item_4</item>
        <item>@string/nav_text_item_5</item>
        <item>@string/nav_text_item_6</item>
        <item>@string/nav_text_settings</item>
        <item>@string/nav_text_help</item>
        <item>@string/nav_text_about</item>
    </string-array>
    
    <!-- Activity - hledání a připojení zařízení-->
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="title_paired_devices">Paired Devices</string>

    <!-- Activity - home -->
    <string name="version">Version: <xliff:g id="app_version">%1$s</xliff:g></string>

    <!-- Activity - help -->
    <string-array name="help_parents">
        <item>@string/nav_text_item_1</item>
        <item>@string/nav_text_item_2</item>
        <item>@string/nav_text_item_3</item>
        <item>@string/nav_text_item_4</item>
        <item>@string/nav_text_item_5</item>
        <item>@string/nav_text_item_6</item>
    </string-array>

    <!-- Activity - nastavení-->
    <string name="language_change">Change language</string>

    <!-- Screen titles -->
    <string name="screen_title_schema">Configuration ERP</string>
    <string name="screen_title_fvep">Configuration f-VEP</string>
    <string name="screen_title_tvep">Configuration t-VEP</string>
    <string name="screen_title_cvep">Configuration c-VEP</string>
    <string name="screen_title_rea">Configuration reaction exp.</string>

    <string name="screen_title_general_settings">General settings</string>
    <string name="screen_title_output_settings">Output settings</string>
    <string name="screen_title_settings_1">Settings 1</string>
    <string name="screen_title_settings_2">Settings 2</string>

    <!-- Output titles -->
    <string name="output_title">. OUTPUT</string>
    <string name="output_title_count">Output count</string>
    <string name="output_title_puls_up">Pulse - up [ms]</string>
    <string name="output_title_puls_down">Pulse - down [ms]</string>
    <string name="output_title_distribution_value">Distribution - value [ms]</string>
    <string name="output_title_distribution_delay">Distribution - delay [%]</string>
    <string name="output_title_brightness">Brightness [%]</string>
    <string name="output_title_frequency">Frequency (0 – 255)</string>
    <string name="output_title_duty_cycle">Duty cycle (0 – 255)</string>
    <string name="output_title_cycle_count">Cycle count</string>
    <string name="output_title_wait_fixed">Wait - fixed</string>
    <string name="output_title_wait_random">Wait - random</string>
    <string name="output_title_miss_time">Miss time [ms]</string>
    <string name="output_title_on_fail">On fail</string>
    <string name="output_title_on_fail_continue">Continue</string>
    <string name="output_title_on_fail_wait">Wait</string>
    <string name="output_title_sex">Sex</string>
    <string name="output_title_sex_male">Male</string>
    <string name="output_title_sex_female">Female</string>
    <string name="output_title_age">Age</string>
    <string name="output_title_weight">Weight</string>
    <string name="output_title_height">Height</string>


    <string name="out">Out</string>
    <string name="wait">Wait</string>
    <string name="puls_length">Puls length [ms]</string>
    <string name="bit_shift">Bit shift</string>
    <string name="time_between">Time between [ms]</string>
    <string name="pattern">. Pattern</string>
    <string name="pattern_32_bit">Pattern 32 bit</string>

    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="save_all">Save all</string>
    <string name="save_values">Save values</string>
    <string name="export">Export</string>
    <string name="output_type">Parameter type</string>

    <string name="context_options">Options</string>
    <string name="context_set_name">Set name</string>

    <!-- Configuration item -->
    <string name="output_count">output count: <xliff:g id="value">%1$s</xliff:g></string>
    <string name="output_count_unknown">unknown</string>
    <string name="corrupted_configuration">configuration is corrupted</string>

    <!-- ERP screens -->
    <string-array name="erp_screen_titles">
        <item>@string/screen_title_schema</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>

    <!-- ERP screen - 1 -->

    <!-- ERP screen - 2 -->
    <string name="erp_screen_2_random">Random</string>
    <string-array name="erp_screen_2_random_values">
        <item>OFF</item>
        <item>Short</item>
        <item>Long</item>
        <item>Short and long</item>
    </string-array>
    <string name="erp_screen_2_edge">Edge</string>
    <string-array name="erp_screen_2_edge_values">
        <item>Leading</item>
        <item>Falling</item>
    </string-array>


    <!-- ERP screen - 3 -->
    <string-array name="erp_screen_3_output_types">
        <item>@string/output_title_puls_up</item>
        <item>@string/output_title_puls_down</item>
        <item>@string/output_title_distribution_value</item>
        <item>@string/output_title_distribution_delay</item>
        <item>@string/output_title_brightness</item>

    </string-array>


    <!-- BCI screens -->
    <!-- BCI f-VEP screens -->
    <string-array name="bci_fvep_screen_titles">
        <item>@string/screen_title_fvep</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <!-- BCI f-VEP screen - 1 -->
    <!-- BCI f-VEP screen - 2 -->

    <!-- BCI f-VEP screen - 3 -->
    <string-array name="bci_fvep_screen_3_output_types">
        <item>@string/output_title_puls_up</item>
        <item>@string/output_title_puls_down</item>
        <item>@string/output_title_frequency</item>
        <item>@string/output_title_duty_cycle</item>
        <item>@string/output_title_brightness</item>

    </string-array>
    <!-- BCI t-VEP screen - 2 -->
    <string-array name="bci_tvep_screen_titles">
        <item>@string/screen_title_tvep</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <string name="bci_tvep_screen_2_pattern_length">Pattern length</string>

    <!-- BCI c-VEP screen - 1 -->
    <string-array name="bci_cvep_screen_titles">
        <item>@string/screen_title_cvep</item>
        <item>@string/screen_title_general_settings</item>
        <item>@string/screen_title_output_settings</item>
    </string-array>
    <!-- BCI c-VEP screen - 2 -->

    <!-- Reaction experiments -->
    <string-array name="rea_screen_titles">
        <item>@string/screen_title_rea</item>
        <item>@string/screen_title_settings_1</item>
        <item>@string/screen_title_settings_2</item>
    </string-array>
    <!-- Reaction experiments screen - 3 -->
    <string-array name="rea_screen_3_fail_type">
        <item>@string/output_title_on_fail_continue</item>
        <item>@string/output_title_on_fail_wait</item>
    </string-array>
    <string-array name="rea_screen_3_sex">
        <item>@string/output_title_sex_male</item>
        <item>@string/output_title_sex_female</item>
    </string-array>

    <!-- Exceptions -->
    <string name="exception_general">Failed to perform action</string>
    <string name="value_out_of_range">Value: <xliff:g id="value">%1$s</xliff:g> is out of range</string>
    <string name="exception_corrupted_configuration">Configuration is corrupted</string>

    <!-- Alerts -->
    <string name="unknown_device">Device not recognized</string>
    <string name="bluetooth_off">Bluetooth is off</string>
    <string name="turn_on">Turn on</string>
    
    <string name="illegal_input">Illegal input</string>

    <string name="configuration_was_deleted">Configuration was deleted</string>
    <string name="count_saved_configuration">Count of saved configurations: <xliff:g id="saved_conf_count">%1$s</xliff:g></string>

    <string name="values_were_saved">Values were saved to: <xliff:g id="config_name">%1$s</xliff:g></string>

    <!-- Hint -->
    <string name="hint_config_name">configuration name</string>

</resources>
