<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_drawer_title_1">
        <menu>
        <item
            android:id="@+id/nav_item_1"
            android:title="@string/nav_text_item_1"
            android:icon="@drawable/pulse"/>
        </menu>

    </item>

    <item
        android:id="@+id/nav_item_2"
        android:title="@string/nav_text_item_2">
        <menu>
            <item
                android:id="@+id/nav_item_2_1"
                android:title="@string/nav_text_item_2_1"
                android:icon="@drawable/pulse" />
            <item
                android:id="@+id/nav_item_2_2"
                android:title="@string/nav_text_item_2_2"
                android:icon="@drawable/pulse" />
            <item
                android:id="@+id/nav_item_2_3"
                android:title="@string/nav_text_item_2_3"
                android:icon="@drawable/pulse" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_item_3"
        android:title="@string/nav_text_item_3"
        android:icon="@drawable/pulse"/>
    <item
        android:id="@+id/nav_item_4"
        android:title="@string/nav_text_item_4"
        android:icon="@drawable/pulse"/>
    <item
        android:id="@+id/nav_item_5"
        android:title="@string/nav_text_item_5"
        android:icon="@drawable/pulse"/>
    <item
        android:id="@+id/nav_item_6"
        android:title="@string/nav_text_item_6"
        android:icon="@drawable/pulse"/>
<item android:title="@string/nav_drawer_title_2">
    <menu>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_text_settings"
            android:icon="@android:drawable/ic_menu_manage"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_text_help"
            android:icon="@drawable/help"
            />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_text_about"
            android:icon="@drawable/info"/>
    </menu>
</item>
</menu>